[package]
name = "lunar-magic-wrapper"
version = "0.1.0"
edition = "2021"
description = "A lightweight wrapper around the command line functionality of Lunar Magic, a commonly used Super Mario World editor."
keywords = ["smw", "lunar magic", "wrapper", "lm"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.10.1"
bitflags = "2.6.0"
